tests/paczka1/fuzzy1/39494275.err
Error in line 40: yO0ZoG5M6XE S446 9,85
